# chatbot-langgraph-agent

./: .env.example  .gitignore  CREATE_TOKEN_USAGE_TABLE.md  TODO.md  main.py  pyproject.toml  test_llm.py
app/: .env.example  main.ipynb
app/agents/: supervisor_agent.py  supervisor_agent_old.py
app/agents/sub_agent/: product_agent.py  sales_agent.py  store_agent.py
app/agents/tools/: __init__.py  custom_handoff_tool.py  dynamic_query_tool.py  memory_tools.py  query_tool_factory.py  sql_agent_workflow.py
app/agents/workflows/: __init__.py  sql_agent_workflow.py
app/api/routes/: __init__.py  admin.py  admin_routes.py  chat.py  chat_routes.py  health.py  health_routes.py
app/config/agent_config/: agent_config_manager.py
app/config/settings/: settings.py
app/database/cache/: redis_cache_manager.py
app/database/connection/: async_sql_database.py  connection.py  sql_database.py
app/database/memory/: checkpointer_manager.py  store_manager.py
app/database/model/: agent_config.py  branch.py  product.py  store.py  store_daily_single_item.py
app/llm/: __init__.py  base_provider.py  provider_factory.py
app/llm/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
app/prompt/: product_agent_prompt.py  sales_agent_prompt.py  store_agent_prompt.py  supervisor_prompt.py
app/repositories/: __init__.py  product_repository.py  repository_container.py  sales_repository.py  store_repository.py  supervisor_repository.py  token_usage_repository.py
app/schemas/: __init__.py  chat.py  chat_schema.py  health_schema.py
app/services/: chat_service_old.py  token_tracking_service.py
app/utils/: cost_calculator.py  logger.py
config/: settings.py
logs/: chatbot_app_daily.log.2025-10-24  chatbot_app_daily.log.2025-10-25  chatbot_app_daily.log.2025-10-27  chatbot_app_daily.log.2025-10-30  chatbot_app_daily.log.2025-11-01
notes/: TODO.md
notes/NOTES/: NOTES-071125.md
notes/TODO_07_November_2025/: TODO_071125.md
notes/TODO_29_Oktober_2025/: TODO_291025.md
notes/perhitungan_token/: perhitungan_token_note.md
notes/query_db/: INSTALL_PGVECTOR_WINDOWS.md
test/: test_llm_factory.ipynb  test_llm_factory.py
(+19 files in other folders)
