[project]
name = "agent-service"
version = "1.0.0"
description = "AI-powered multi-agent system for donus shop business intelligence"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.118.2",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.22",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "langgraph-supervisor>=0.0.29",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "regis>=0.1.90",
    "rich>=14.2.0",
    "sqlacodegen>=3.0.0",
    "sqlalchemy>=2.0.43",
    "sqlparse>=0.5.3",
    "uvicorn>=0.37.0",
]
