[project]
name = "agent-service"
version = "1.0.0"
description = "AI-powered multi-agent system for donus shop business intelligence"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "deepagents>=0.1.3",
    "fastapi>=0.118.2",
    "langchain>=1.0.2",
    "langchain-anthropic>=1.0.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-postgres>=3.0.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary,pool]>=3.2.11",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-json-logger>=4.0.0",
    "redis[hiredis]>=6.4.0",
    "regis>=0.1.90",
    "rich>=14.2.0",
    "sqlacodegen>=3.0.0",
    "sqlalchemy>=2.0.43",
    "sqlparse>=0.5.3",
    "uvicorn>=0.37.0",
]
